Fix title overlapping form when mobile keyboard pops up

--- a/src/components/login/login.styles.scss
+++ b/src/components/login/login.styles.scss
@@ -16,9 +16,8 @@
     background-position: center;
 
     .title {
-        position: absolute;
-        top: 10%;
         font-size: 3.6rem;
+        margin-bottom: 4rem;
     }
 
     form {
